--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:title="@string/activity_shortcutmanager_debug" android:id="@+id/activity_shortcutmanager_debug"/>
+    <item android:title="@string/activity_preferences_debug" android:id="@+id/activity_preferences_debug"/>
+	
 </menu>
